# OverlayLib

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  meson.build
include/: overlay.h  overlay_config.h  overlay_webview.h  overlay_window.h
samples/: index.css  index.html  index.js
scripts/: run-docker-wayland.sh
src/: main.cpp  overlay.cpp  overlay_config.cpp  overlay_webview.cpp  overlay_window.cpp
